--- a/StockAnalysis/Exchange/MoneyInOutViewController.xib
+++ b/StockAnalysis/Exchange/MoneyInOutViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,7 +30,7 @@
                     <rect key="frame" x="0.0" y="41" width="414" height="44"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选择" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNK-0f-7lo">
-                            <rect key="frame" x="21.999999999999996" y="12" width="32.666666666666657" height="21"/>
+                            <rect key="frame" x="21.999999999999996" y="11.666666666666664" width="32.666666666666657" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="rFC-Ev-cnY"/>
                             </constraints>
@@ -51,7 +51,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="期货1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zwZ-X3-vvK">
-                            <rect key="frame" x="187.33333333333334" y="11" width="40" height="21"/>
+                            <rect key="frame" x="187" y="11.666666666666664" width="40" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="21" id="hhh-ET-VdL"/>
                             </constraints>
@@ -76,7 +76,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="转至" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ztj-ZS-CIU">
-                    <rect key="frame" x="195" y="114" width="24.666666666666657" height="17"/>
+                    <rect key="frame" x="194.66666666666666" y="114" width="24.666666666666657" height="17"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="17" id="hpR-OQ-mXz"/>
                     </constraints>
@@ -85,7 +85,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="交易账户" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4fy-lY-5ea">
-                    <rect key="frame" x="95.333333333333314" y="110" width="73.666666666666686" height="24"/>
+                    <rect key="frame" x="95" y="110" width="73.666666666666686" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="hCm-Lq-NA5"/>
                     </constraints>
@@ -94,7 +94,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="商户账户" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wLu-3u-k3K">
-                    <rect key="frame" x="242.66666666666666" y="110" width="73.666666666666657" height="24"/>
+                    <rect key="frame" x="242.33333333333334" y="110" width="73.666666666666657" height="24"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="24" id="lLs-mZ-Ehg"/>
                     </constraints>
@@ -103,7 +103,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="可转0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mgn-sb-NIY">
-                    <rect key="frame" x="188.66666666666666" y="149" width="37.333333333333343" height="21"/>
+                    <rect key="frame" x="188.33333333333334" y="149" width="37.333333333333343" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="BmG-71-svb"/>
                     </constraints>
