--- a/StockAnalysis/Business/Business ViewController.xib
+++ b/StockAnalysis/Business/Business ViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,6 +13,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Business_ViewController">
             <connections>
                 <outlet property="cnyMoney" destination="X1u-H4-tTo" id="gjG-6T-S5d"/>
+                <outlet property="lookMoney" destination="VAF-Z8-y8e" id="bbu-tQ-fYC"/>
                 <outlet property="moneyList" destination="1ZQ-M7-i09" id="i6L-L5-UtC"/>
                 <outlet property="usdMoney" destination="y6l-Z4-Dnu" id="sSA-fh-4Z7"/>
                 <outlet property="view" destination="PQO-hT-sBZ" id="Q3g-tp-oOy"/>
@@ -45,7 +45,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$≈0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y6l-Z4-Dnu">
-                            <rect key="frame" x="130" y="86" width="82" height="21"/>
+                            <rect key="frame" x="130.5" y="86" width="82" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="82" id="ZWS-Vi-7ti"/>
                             </constraints>
@@ -62,7 +62,7 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye-o" translatesAutoresizingMaskIntoConstraints="NO" id="VAF-Z8-y8e">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye-o" translatesAutoresizingMaskIntoConstraints="NO" id="VAF-Z8-y8e">
                             <rect key="frame" x="211" y="18" width="21" height="12"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="12" id="5GI-Ev-Ly0"/>
@@ -123,7 +123,7 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="收付款设置" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xou-m9-nFP">
-                            <rect key="frame" x="61" y="48" width="67" height="16"/>
+                            <rect key="frame" x="60.5" y="48" width="67" height="16"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="16" id="sTd-NU-RJ5"/>
                             </constraints>
@@ -163,7 +163,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="huazhuan" translatesAutoresizingMaskIntoConstraints="NO" id="OJ4-8B-LzU">
-                            <rect key="frame" x="84" y="22" width="19" height="18"/>
+                            <rect key="frame" x="84.5" y="22" width="19" height="18"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="18" id="x7V-Cv-Qha"/>
                                 <constraint firstAttribute="width" constant="19" id="y3r-f8-xqC"/>
