--- a/StockAnalysis/Exchange/ExchangeViewController.xib
+++ b/StockAnalysis/Exchange/ExchangeViewController.xib
@@ -14,6 +14,7 @@
             <connections>
                 <outlet property="RMBLabel" destination="joF-NK-Au7" id="uEW-is-GAZ"/>
                 <outlet property="USDLabel" destination="Nq9-uS-XAb" id="TPa-jQ-a1j"/>
+                <outlet property="lookMoney" destination="6m0-70-Zc7" id="EjX-yS-CgV"/>
                 <outlet property="moneyList" destination="fYb-TW-Wpn" id="EsV-Mr-9dI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -61,7 +62,7 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye-o" translatesAutoresizingMaskIntoConstraints="NO" id="6m0-70-Zc7">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="eye-o" translatesAutoresizingMaskIntoConstraints="NO" id="6m0-70-Zc7">
                             <rect key="frame" x="211" y="18" width="21" height="12"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="12" id="drJ-cr-cBv"/>
